@@ -1284,3 +1284,6 @@ Version 13
 		bugs; please let us know.
 	Removed vestigial 'parent' instance variable in PropertyInspector, 
 		which wasn't really being used.	
+	ChartGenerator: swing makeover to prevent series attributes from spreading
+		to cover any vertical space.
+	
